fixed alignment on list page

--- a/public_html/project/styles.css
+++ b/public_html/project/styles.css
@@ -11,7 +11,6 @@ input {
     border-radius: 8px;
     border: 2px solid #3498DB;
     padding: 8px 12px;
-    margin: 5px 0;
 }
 
 body {
